[tool.poetry]
name = "mmhdan"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiodns = "^3.0.0"
aiofiles = "^23.1.0"
asyncwhois = "^1.0"
beautifulsoup4 = "^4.12"
fastapi = "^0.101"
fastapi-utils = "^0.2.1"
gunicorn = "^21.2"
ioc-finder = "^7.3.0"
loguru = "^0.7"
mmh3 = "^4.0"
pyOpenSSL = "^23.2"
requests = { extras = ["security"], version = "^2.31" }
tldextract = "^3.4"
uvicorn = { extras = ["standard"], version = "^0.22" }
whois-parser = "^0.1"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.2"
autopep8 = "^2.0"
black = "^23.7"
coveralls = "^3.3"
flake8 = "^6.1"
isort = "^5.12"
mypy = "^1.4"
pre-commit = "^3.3"
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-mock = "^3.11"
pytest-pretty = "^1.2"
pytest-randomly = "^3.13"
pyupgrade = "^3.10"
types-requests = "^2.31"
urllib3 = "^1.26"
vcrpy = "^5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
