[tool.poetry]
name = "shimon"
version = "0.1.0"
description = ""
authors = ["Manabu Niseki <manabu.niseki@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
aiodns = "^3.2"
aiofiles = "^23.2"
aiometer = "^0.5"
asyncwhois = "^1.1"
beautifulsoup4 = "^4.12"
fastapi = "^0.110"
gunicorn = "^21.2"
httpx = "^0.27"
ioc-finder = "^7.3"
loguru = "^0.7"
mmh3 = "^4.1"
pyhumps = "^3.8"
pyOpenSSL = "^24.1"
returns = { extras = ["compatible-mypy"], version = "^0.22" }
tldextract = "^5.1"
uvicorn = { extras = ["standard"], version = "^0.29" }

[tool.poetry.group.dev.dependencies]
coveralls = "^3.3"
pytest = "^8.1"
pytest-cov = "^4.1"
pytest-mock = "^3.12"
pytest-pretty = "^1.2"
pytest-randomly = "^3.15"
pyupgrade = "^3.15.1"
ruff = "^0.3.3"
vcrpy = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "C",     # flake8-comprehensions
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "I",     # isort
  "N",     # pep8-naming
  "RET",   # flake8-return
  "RUF",   # Ruff-specific rules
  "SIM",   # flake8-simplify
  "T20",   # flake8-print
  "W",     # pycodestyle warnings
]
ignore = [
  "E501", # line too long, handled by black
]

[tool.mypy]
plugins = ["pydantic.mypy", "returns.contrib.mypy.returns_plugin"]
